2014-05-11  Anders Carlsson  <andersca@apple.com>

        Remove local storage directory and sandbox extension from WebProcessCreationParameters
        https://bugs.webkit.org/show_bug.cgi?id=132808

        Reviewed by Beth Dakin.

        * Shared/WebProcessCreationParameters.cpp:
        (WebKit::WebProcessCreationParameters::encode):
        (WebKit::WebProcessCreationParameters::decode):
        * Shared/WebProcessCreationParameters.h:
        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::createNewWebProcess):
        * WebProcess/cocoa/WebProcessCocoa.mm:
        (WebKit::WebProcess::platformInitializeWebProcess):

2014-05-11  Jaehun Lim  <ljaehun.lim@samsung.com>

        Unreviewed, CMake build fix after r168603

        Add APIContextConfiguration.cpp and WKContextConfigurationRef.cpp to the source list.

        * CMakeLists.txt:

2014-05-11  Anders Carlsson  <andersca@apple.com>

        Add a WKContextConfigurationRef object and make the injected bundle path part of the configuration
        https://bugs.webkit.org/show_bug.cgi?id=132806
        <rdar://problem/16830143>

        Reviewed by Beth Dakin.

        Many setters on WKContextRef really only make sense to set early on, so move to a pattern where we create a
        configuration object, a WKContextConfiguration which WKContexts can be created from. Add the injected bundle path
        as a configuration property. More setters will follow.

        * Shared/API/c/WKBase.h:
        Add WKContextConfigurationRef.

        * Shared/APIObject.h:
        Add ContextConfiguration enum declaration.

        * UIProcess/API/C/WKAPICast.h:
        Handle WKContextConfigurationRef.

        * UIProcess/API/C/WKContext.cpp:
        (WKContextCreate):
        Create an empty WKContextConfigurationRef object and pass it to WKContextCreateWithConfiguration.

        (WKContextCreateWithInjectedBundlePath):